--- a/index.Rmd
+++ b/index.Rmd
@@ -1,9 +1,23 @@
 ---
-title: "My Website"
+title: 'Psychological Research Methods: Data Management & Analysis'
+subtitle: '2024/2025'
 ---
 
-Hello, Website!
+```{r, echo = F, message = F, warning = F}
+baseColor <- '#4CA384'
+accent1 <- '#9AD079'
+accent2 <- '#18778C'
+accent3 <- '#19424C'
+```
 
-For more information about simple R Markdown websites, please read the documentation at https://bookdown.org/yihui/rmarkdown/rmarkdown-site.html.
 
-Please also note that simple R Markdown sites are _not_ based on **blogdown**. They are probably good for websites with only a few Rmd documents. For larger-scale and more sophisticated websites (such as blogs), you may want to use **blogdown** instead: https://github.com/rstudio/blogdown.
+
+## Instructor
+
+[Monica Truelove-Hill](https://www.ed.ac.uk/profile/monica-truelove-hill)
+
+<p><a href="mailto:m.truelovehill@ed.ac.uk">m.truelovehill@ed.ac.uk</a></p>
+
+## Course Description
+
+This option is a core course for the MSc in Psychology of Mental Health (Conversion) at the University of Edinburgh. This course aims to provide students with both a theoretical and practical understanding of the use of statistics in psychology. It will familiarise students with both quantitative and qualitative statistical methods, with a primary focus on quantitative methods. Over the course, lectures will cover topics such as t-tests, ANOVA, regression, and thematic analysis, among others. Additionally, students will attend labs during which they gain hands-on practice implementing the content covered in lectures.
