--- a/docs/Lectures/Week03_NHST_lecture.Rmd
+++ b/docs/Lectures/Week03_NHST_lecture.Rmd
@@ -287,11 +287,11 @@ testDat +
 
 --
 
-+ Many of the statistical tests we will learn about test the probability of obtaining a specific value of a test statistic, given that the null hypothesis is true. 
++ Many of the statistical tests we will learn about work by testing the probability of our results given the null hypothesis
 
   + In other words, if the null hypothesis is true, how likely is it that we would get results at least as extreme as ours?
 
-+ If the value is unusual enough, we reject the null hypothesis.
++ If our results are unusual enough, we reject the null hypothesis.
 
 ---
 class: center, inverse, middle
@@ -299,13 +299,13 @@ class: center, inverse, middle
 ## Questions?
 
 ---
-## Null Distribution
+## Null Distributions
 
 + Most of the tests we cover in this course evaluate significance by evaluating results against a predefined **null distribution**
 
 + The null distribution is the probability distribution of a statistic **given that the null hypothesis is true**. 
 
-+ The shape of the null distribution depends on the test statistic (and the degrees of freedom, which we'll get to at a later point in the course)
++ Each statistical test is associated with a separate null distribution
 
 ---
 
@@ -375,6 +375,18 @@ ggplot(data.frame(x=c(0, 5)), aes(x=x)) +
 
 ```
 ]
+
+---
+## Comparing Results to Null Distribution
+
++ When you run a statistical test, you:
+
+  1. Compute a test statistic based on your data
+  
+  2. Calculate the probability of obtaining this statistic if the null were true
+  
+  3. Use this probability to make a decision whether to reject the null hypothesis.
+  
 ---
 ## Comparing Results to Null Distribution
 
@@ -394,6 +406,7 @@ baset + geom_vline(xintercept = .75, linewidth = 1.5) +
   annotate('text', label = 't = 0.75', x = 2.25, y = .3, size = 5)
 ```
 ]]
+
 
 ---
 ## Comparing Results to Null Distribution
@@ -459,28 +472,31 @@ class: center, inverse, middle
 ## Questions?
 
 ---
-## $p$-values
+## $p$ - values
 
 .pull-left[
 + The $p$-value is the **probability** of obtaining data at least as extreme as ours, given that the null hypothesis is true.
 
-+ It provides insight into the strength of our evidence against the null hypothesis. 
-
++ It is not:
+  + The likelihood that the null hypothesis is true.
+  + The likelihood that our hypothesis is false
 ]
 
 ---
 count: false
 
-## $p$-values
+## $p$ - values
 
 .pull-left[
 + The $p$-value is the **probability** of obtaining data at least as extreme as ours, given that the null hypothesis is true.
 
-+ It provides insight into the strength of our evidence against the null hypothesis. 
-
 + It is not:
   + The likelihood that the null hypothesis is true.
   + The likelihood that our hypothesis is false
+
++ It provides insight into the strength of our evidence against the null hypothesis. 
+
++ If we get a $p$-value past a certain threshold, we consider our results to be significant.
 
 ]
 
@@ -494,5 +510,113 @@ ns + annotate('text', label = 'p = .230', x = 4.5, y = .05, size = 6, color = ac
 ```
 ]
 
+---
+
+## $p$ - values
+
++ Remember, we're comparing our test statistic against a null distribution, so it's *possible* it could occur even if the null hypothesis were true. 
+
+--
+
++ Rejecting the null when it is actually true is known as a **Type I Error**. 
+
+  + We have to make a decision about how much we want to risk making a Type I error
+
+  + Our accepted risk threshold is known as $\alpha$
+
+--
+
++ If our $p$-value is equal to or less than our predetermined $\alpha$, we consider our results to be significant.
+
+---
+## Effect Size
+
++ On it's own, a $p$-value is not sufficient. 
+
+.pull-left[.center[
+```{r, echo = F, fig.width=5, fig.height=3.5}
+set.seed(2)
+dat <- data.frame(group = c(rep('A', 15), rep('B', 15)), x=c(rnorm(15, mean = 5, sd = 3), rnorm(15, mean = 12, sd = 3)))
+
+set.seed(8)
+dat2 <- data.frame(group = c(rep('A', 100), rep('B', 100)), x=c(rnorm(100, mean = 5, sd = 3), rnorm(100, mean = 6.5, sd = 3)))
+
+ggplot(data.frame(y=c(-10, 30)), aes(y)) + 
+  geom_histogram(data = dat[dat$group=='A',], aes(x, y = after_stat(density)), binwidth = 3, fill = baseColor, color = accent3, alpha = .7) +
+  geom_histogram(data = dat[dat$group=='B',], aes(x, y = after_stat(density)), binwidth = 3, fill = accent2, color = accent3, alpha = .7) + 
+  stat_function(fun=dnorm, geom='line', args=c(mean = 5.7, sd = 3), linewidth=1.5, color = baseColor) +
+  stat_function(fun=dnorm, geom='line', args=c(mean = 12.6, sd = 3), linewidth=1.5, color = accent2) +
+  theme(axis.text = element_blank(),
+        axis.title = element_blank(),
+        axis.ticks = element_blank()) +
+  annotate('text', label = 'n = 15 per group \n p < .001', x = 25, y = .1, size = 5) +
+  geom_vline(xintercept = 5.7, color = baseColor, linewidth = 1.5, linetype = 2) +
+  geom_vline(xintercept = 12.6, color = accent2, linewidth = 1.5, linetype = 2)
+```
+]]
+
+.pull-right[.center[
+```{r, echo = F, fig.width=5, fig.height=3.5}
+ggplot(data.frame(y=c(-10, 25)), aes(y)) + 
+  geom_histogram(data = dat2[dat$group=='A',], aes(x, y = after_stat(density)), binwidth = 3, fill = baseColor, color = accent3, alpha = .7) +
+  geom_histogram(data = dat2[dat$group=='B',], aes(x, y = after_stat(density)), binwidth = 3, fill = accent2, color = accent3, alpha = .7) + 
+  stat_function(fun=dnorm, geom='line', args=c(mean = 4.7, sd = 3), linewidth=1.5, color = baseColor) +
+  stat_function(fun=dnorm, geom='line', args=c(mean = 6.5, sd = 3), linewidth=1.5, color = accent2) +
+  theme(axis.text = element_blank(),
+        axis.title = element_blank(),
+        axis.ticks = element_blank()) +
+  annotate('text', label = 'n = 100 per group', x = 20, y = .1, size = 5) +
+  geom_vline(xintercept = 4.7, color = baseColor, linewidth = 1.5, linetype = 2) +
+  geom_vline(xintercept = 6.5, color = accent2, linewidth = 1.5, linetype = 2)
+```
+]]
+
+---
+count: false
+
+## Effect Size
+
++ On it's own, a $p$-value is not sufficient. 
+
+.pull-left[.center[
+```{r, echo = F, fig.width=5, fig.height=3.5}
+set.seed(2)
+dat <- data.frame(group = c(rep('A', 15), rep('B', 15)), x=c(rnorm(15, mean = 5, sd = 3), rnorm(15, mean = 12, sd = 3)))
+
+set.seed(8)
+dat2 <- data.frame(group = c(rep('A', 100), rep('B', 100)), x=c(rnorm(100, mean = 5, sd = 3), rnorm(100, mean = 6.5, sd = 3)))
+
+ggplot(data.frame(y=c(-10, 30)), aes(y)) + 
+  geom_histogram(data = dat[dat$group=='A',], aes(x, y = after_stat(density)), binwidth = 3, fill = baseColor, color = accent3, alpha = .7) +
+  geom_histogram(data = dat[dat$group=='B',], aes(x, y = after_stat(density)), binwidth = 3, fill = accent2, color = accent3, alpha = .7) + 
+  stat_function(fun=dnorm, geom='line', args=c(mean = 5.7, sd = 3), linewidth=1.5, color = baseColor) +
+  stat_function(fun=dnorm, geom='line', args=c(mean = 12.6, sd = 3), linewidth=1.5, color = accent2) +
+  theme(axis.text = element_blank(),
+        axis.title = element_blank(),
+        axis.ticks = element_blank()) +
+  annotate('text', label = 'n = 15 per group \n p < .001', x = 25, y = .1, size = 5) +
+  geom_vline(xintercept = 5.7, color = baseColor, linewidth = 1.5, linetype = 2) +
+  geom_vline(xintercept = 12.6, color = accent2, linewidth = 1.5, linetype = 2)
+```
+
+** $p$ < .001**
+]]
 
 
+.pull-right[.center[
+```{r, echo = F, fig.width=5, fig.height=3.5}
+ggplot(data.frame(y=c(-10, 25)), aes(y)) + 
+  geom_histogram(data = dat2[dat$group=='A',], aes(x, y = after_stat(density)), binwidth = 3, fill = baseColor, color = accent3, alpha = .7) +
+  geom_histogram(data = dat2[dat$group=='B',], aes(x, y = after_stat(density)), binwidth = 3, fill = accent2, color = accent3, alpha = .7) + 
+  stat_function(fun=dnorm, geom='line', args=c(mean = 4.7, sd = 3), linewidth=1.5, color = baseColor) +
+  stat_function(fun=dnorm, geom='line', args=c(mean = 6.5, sd = 3), linewidth=1.5, color = accent2) +
+  theme(axis.text = element_blank(),
+        axis.title = element_blank(),
+        axis.ticks = element_blank()) +
+  annotate('text', label = 'n = 100 per group', x = 20, y = .1, size = 5) +
+  geom_vline(xintercept = 4.7, color = baseColor, linewidth = 1.5, linetype = 2) +
+  geom_vline(xintercept = 6.5, color = accent2, linewidth = 1.5, linetype = 2)
+```
+
+** $p$ < .001**
+]]
